# retinaface_tensorRT

./: README.md
caffe2onnx/: convert2onnx.py
caffe2onnx/caffemodel/: retina.prototxt
caffe2onnx/onnxmodel/: retina.onnx  retina_200.onnx
caffe2onnx/src/: c2oObject.py  caffe2onnx.py  load_save_model.py  op_layer_info.py
caffe2onnx/src/OPs/: BatchNorm.py  Concat.py  Conv.py  ConvTranspose.py  Crop.py  Dropout.py  Eltwise.py  Gemm.py  LRN.py  PRelu.py  Pooling.py  ReLU.py  Reshape.py  Softmax.py  Upsample.py  __init__.py
src/: CMakeLists.txt  main.cpp  retina.onnx
